Fix swagger path param (Issue: #18)
