# docs/swagger.json
@@ -55,7 +55,7 @@
                 }
             }
         },
-        "/users/:id": {
+        "/users/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -69,7 +69,7 @@
                         "type": "integer",
                         "description": "user search by id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -87,6 +87,15 @@
                     "User"
                 ],
                 "summary": "刪除用戶",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user search by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -101,6 +110,27 @@
                     "User"
                 ],
                 "summary": "更新用戶信息",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user search by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
